--- a/Trial/hell.html
+++ b/Trial/hell.html
@@ -32,7 +32,7 @@
     </div>
     <hr>
     <div class="input">
-        <input type="text" class="bigsearchbar" placeholder="Search 26,233 ions..">
+        <input type="text" class="bigsearchbar" placeholder="Search 26,233 ions...">
     </div>
 </body>
 </html>
