--- a/Trial/hell.html
+++ b/Trial/hell.html
@@ -34,5 +34,9 @@
     <div class="input">
         <input type="text" class="bigsearchbar" placeholder="Search 26,233 ions...">
     </div>
+    <div class="textunder">
+        <p> Try <a class="textunderneath" href="https://youtube.com">Youtube</a>, <a class="textunderneath" href="https://x.com">Twitter</a>, <a class="textunderneath" href="https://google.com">Google</a> or <a class="textunderneath" href="https://bussines.com">Bussiness Stocks</a>
+        </p>
+    </div>
 </body>
 </html>
