--- a/Trial/hell.html
+++ b/Trial/hell.html
@@ -38,5 +38,19 @@
         <p> Try <a class="textunderneath" href="https://youtube.com">Youtube </a>, <a class="textunderneath" href="https://x.com">Twitter </a>, <a class="textunderneath" href="https://google.com">Google  </a>  or  <a class="textunderneath" href="https://bussines.com"> Bussiness Stocks</a>
         </p>
     </div>
+    <div class="numbers-container">
+        <div class="numbers">26,233 <br> i</div>
+        <div class="numbers">8 <br>  </div>
+        <div class="numbers">12,896</div>
+        <div class="numbers">68</div>
+        <div class="numbers">2,025</div>
+    </div>
+    <div class="text-container">
+        <div class="text"></div>
+        <div class="text"></div>
+        <div class="text"></div>
+        <div class="text"></div>
+        <div class="text"></div>
+    </div>
 </body>
 </html>
