--- a/Trial/hell.html
+++ b/Trial/hell.html
@@ -39,18 +39,17 @@
         </p>
     </div>
     <div class="numbers-container">
-        <div class="numbers">26,233 <br> i</div>
-        <div class="numbers">8 <br>  </div>
-        <div class="numbers">12,896</div>
-        <div class="numbers">68</div>
-        <div class="numbers">2,025</div>
+        <div class="numbers">26,233  <p class="nw">total icons in Font Awesome 6 Pro </p></div>
+        <div class="numbers">8 <br> <p class="nw">style of Icons</p></div>
+        <div class="numbers">12,896 <p class="nw"> new icons in font awesome 6 </p> </div>
+        <div class="numbers">68  <p class="nw"> category of Icons</p></div>
+        <div class="numbers">2,025  <p class="nw">free and open-source</p> </div>
     </div>
-    <div class="text-container">
-        <div class="text"></div>
-        <div class="text"></div>
-        <div class="text"></div>
-        <div class="text"></div>
-        <div class="text"></div>
+  
+    <div class="card">
+        <div class="card-one"></div>
+        <div class="card-two"></div>
+        <div class="card-three"></div>
     </div>
 </body>
 </html>
