--- a/N /hell.html
+++ b/N /hell.html
@@ -47,9 +47,21 @@
     </div>
   
     <div class="card">
-        <div class="card-one"></div>
-        <div class="card-two"></div>
-        <div class="card-three"></div>
+        <div class="card-one">
+            <div class="coinside">
+                Go
+            </div>
+        </div>
+        <div class="card-two">
+            <div class="coinside">
+                Inside
+            </div>
+        </div>
+        <div class="card-three">
+            <div class="coinside">
+                !!
+            </div>
+        </div>
     </div>
 </body>
 </html>
